# bunkergame

./: Makefile  README.md  docker-compose.yaml  example.env
bunkergame/: Dockerfile  Makefile  manage.py  pyproject.toml
bunkergame/accounts/: forms.py  views.py
bunkergame/accounts/templates/: base.html  login.html  register.html
bunkergame/bunkergame/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
bunkergame/bunkergame/templates/: 404.html
bunkergame/game/: apps.py  urls.py  views.py
bunkergame/gameengine/: admin.py  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
bunkergame/gameengine/migrations/: 0001_initial.py  0002_gameengine_game_status.py  0003_alter_user_account_id_alter_user_game_id.py  0004_alter_user_account_id.py  0005_gameengine_created_at_gameengine_updated_at_and_more.py  0006_gameengine_owner_id.py  0007_alter_gameengine_owner_id.py  0008_rename_user_gameuser.py  0009_rename__bunker_descritions_gameengine_bunker_descritions_and_more.py  0010_gameengine_game_name.py  0011_gameuser_game_name_gameuser_game_number.py  0012_gameuser_is_additional_skills_visible_and_more.py  0013_gameengine_user_number_turn.py  0014_alter_gameuser_vote_id.py  0015_alter_gameuser_is_in_game.py  0016_gameuser_age.py  0017_gameengine_ending.py  0018_alter_gameengine_ending.py  0019_alter_gameuser_game_name.py  0020_gameuser_is_showed_stat_at_turn.py
bunkergame/gameengine/templates/: game.html
bunkergame/gameengine/utils/: exceptions.py  helpers.py  names.py  nn_request.py  (+1 more)
bunkergame/lobbys/: apps.py  urls.py  views.py
(+13 files in other folders)
