[project]
name = "manage"
version = "0.1.0"
description = ""
authors = [
    {name = "s-sorokaty",email = "sorokaty0824@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-password-validators (>=1.7.3,<2.0.0)",
    "django (>=5.2,<6.0)",
    "channels (>=4.2.2,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

